[package]
name = "eframe_template"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow"] }
log = "0.4"
ureq = "3.0.0-rc2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
osm-primitives = "2.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # accessing the DOM to hide the loading text

[profile.release]
opt-level = 2 # fast and small wasm
